# django-coding-challenge

./: .dockerignore  .env  .gitignore  README.md  compose.yml  manage.py  pyproject.toml
coding_challenge/: __init__.py
coding_challenge/core/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
coding_challenge/core/tests/: test_init.py
coding_challenge/movies/: admin.py  urls.py
coding_challenge/movies/migrations/: 0001_initial.py  0002_seed_db.py
coding_challenge/movies/models/: __init__.py  movie.py
coding_challenge/movies/serializers/: __init__.py  movie_serializer.py
coding_challenge/movies/views/: __init__.py  movie_list.py
compose/: Dockerfile  entrypoint  start
config/: __init__.py  urls.py
config/app_urls/: api_urls.py
config/settings/: base.py  local.py  test.py
